corrected contact form size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,13 @@ body {
 .navbar-brand {
   font-size: 30px;
 }
-
+.company-logo {
+  height: 45px;
+  padding-bottom: 5px;
+}
 .company-name {
     padding-left: 5px;
     height: 45px;
-    background: green;
     
 }
 
@@ -218,13 +220,7 @@ h1 {
 }
 @media only screen and (max-width: 440px) {
     #contactForm {
-        width: 300px;
-    }
-    .textarea {
-      width: 200px;
-    }
-    .input {
-      width: 200px;
+        width: 80%;
     }
 }
 
